<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/time_slot3_availability"
        style="@style/InputLabel"
        android:layout_width="131dp"
        android:layout_height="27dp"
        android:text="courts available: 0"
        app:layout_constraintBottom_toTopOf="@+id/time_slot3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/time_slot3"
        app:layout_constraintTop_toBottomOf="@+id/time_slot2"
        app:layout_constraintVertical_bias="0.78" />

    <TextView
        android:id="@+id/timeslot3text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="364dp"
        android:text="@string/TimeSlot3"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/time_slot3"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/time_slot4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="464dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/time_slot2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeslot1text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="148dp"
        android:text="@string/TimeSlot1"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/time_slot1"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeslot2text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="256dp"
        android:text="@string/TimeSlot2"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/time_slot2"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_slot1_availability"
        style="@style/InputLabel"
        android:layout_width="131dp"
        android:layout_height="27dp"
        android:text="courts available: 0"
        app:layout_constraintBottom_toTopOf="@+id/time_slot1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/time_slot1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902" />

    <Spinner
        android:id="@+id/time_slot1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeslot4text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="472dp"
        android:text="@string/TimeSlot4"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/time_slot4"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_slot2_availability"
        style="@style/InputLabel"
        android:layout_width="131dp"
        android:layout_height="27dp"
        android:text="courts available: 0"
        app:layout_constraintBottom_toTopOf="@+id/time_slot2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/time_slot3"
        app:layout_constraintTop_toBottomOf="@+id/time_slot1"
        app:layout_constraintVertical_bias="0.804" />

    <Spinner
        android:id="@+id/time_slot3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="356dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_slot4_availability"
        style="@style/InputLabel"
        android:layout_width="131dp"
        android:layout_height="27dp"
        android:text="courts available: 0"
        app:layout_constraintBottom_toTopOf="@+id/time_slot4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/time_slot4"
        app:layout_constraintTop_toBottomOf="@+id/time_slot3"
        app:layout_constraintVertical_bias="0.634" />

    <TextView
        android:id="@+id/courtAvailabilityDateText"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:text="@string/CourtAvailability"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/checkAnotherDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckOtherDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeslot4text"
        app:layout_constraintVertical_bias="0.556" />

    <Button
        android:id="@+id/bookingButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/MakeBookingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeslot4text" />
</androidx.constraintlayout.widget.ConstraintLayout>