<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="783dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/MakeABooking"
            android:layout_width="234dp"
            android:layout_height="53dp"
            android:padding="10dp"
            android:text="@string/MakeABooking"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024" />

        <DatePicker
            android:id="@+id/bookingDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="calendar"
            android:padding="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MakeABooking"
            app:layout_constraintVertical_bias="0.325" />

        <TextView
            android:id="@+id/PickDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/PickADate"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/bookingDatePicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MakeABooking"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/checkDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/CheckDate"
            app:layout_constraintBottom_toBottomOf="@+id/bookingDatePicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bookingDatePicker"
            app:layout_constraintVertical_bias="0.965" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:padding="20dp"
            android:text="Available Date?"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkDateButton" />

        <Spinner
            android:id="@+id/time_slot1"
            android:layout_width="268dp"
            android:layout_height="36dp"
            android:layout_marginTop="176dp"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkDateButton" />

        <Spinner
            android:id="@+id/time_slot2"
            android:layout_width="268dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_slot1" />

        <Spinner
            android:id="@+id/time_slot3"
            android:layout_width="268dp"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_slot2" />

        <Spinner
            android:id="@+id/time_slot4"
            android:layout_width="268dp"
            android:layout_height="36dp"
            android:layout_marginTop="28dp"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_slot3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>